lang.java.statics.test/tests/positive/packages/class-in-compilation-unit-shadows-on-demand-imported-class.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.*;
    public class A {
        A a = (p.A) null;
    }

}

[q] {

    [A]
    package q;
    public class A {
    }

}
