lang.java.statics.test/tests/negative/packages/class-in-compilation-unit-shadows-on-demand-imported-class.no.javtest
STATIX fail java\.subtype\.sub-type
JAVAC  fail incompatible types\: q\.A cannot be converted to p\.A

[p] {

    [A]
    package p;
    import q.*;
    public class A {
        A a = (q.A) null;
    }

}

[q] {

    [A]
    package q;
    public class A {
    }

}
